# gam-master

./: Cargo.toml  README.md  example_config.json  install.ps1  install.sh  install_from_source.sh  test_attach.exp
.github/workflows/: ci.yml  release.yml
scripts/: install.sh
src/: main.rs
