[package]
name = "git-account-manager"
version = "0.1.0"
edition = "2021"
description = "Git Account Manager (gam): Manage multiple Git SSH accounts easily"

[[bin]]
name = "gam"
path = "src/main.rs"

[dependencies]
inquire = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
home = "0.5"
open = "5.0"
